--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build-babel": "babel -d ./build ./src -s",
     "clean": "rm -rf .nyc_output build coverage && mkdir build",
     "dev": "cross-env DEBUG=dev nodemon --ignore 'uploads/*' --exec babel-node src/index.js",
+    "generate": "cross-env DEBUG=dev nodemon --ignore 'uploads/*' --exec babel-node faker.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,13 +21,16 @@
     "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "winston": "^3.8.2"
+    "read-excel-file": "^5.5.0",
+    "winston": "^3.8.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.1",
     "@babel/node": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
+    "@faker-js/faker": "^7.5.0",
     "eslint": "^8.10.0"
   }
 }
