generate xlsx file

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-babel": "babel -d ./build ./src -s",
     "clean": "rm -rf .nyc_output build coverage && mkdir build",
     "dev": "cross-env DEBUG=dev nodemon --ignore 'uploads/*' --exec babel-node src/index.js",
-    "generate": "cross-env DEBUG=dev nodemon --ignore 'uploads/*' --exec babel-node faker.js",
+    "generate": "cross-env DEBUG=dev nodemon --ignore 'uploads/*' --exec babel-node generateXLSX.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
