--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,16 @@
 {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "useBuiltIns": "usage",
-          "corejs": 3
-        }
-      ]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": 3
+      }
     ]
-  }
-  
-  
+  ]
+  // "plugins": [
+  //   [
+  //     "@babel/transform-runtime"
+  //   ]
+  // ]
+}
